--- a/note.html
+++ b/note.html
@@ -22,9 +22,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
-
+  
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline d-flex my-2 my-lg-0 position-absolute " style="right: 20px;top:10px">
                 <input class="form-control mr-sm-2" id="searchTxt" type="search" placeholder="Search"
                     aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -46,7 +46,7 @@
                 <div class="form-group">
                     <textarea class="form-control" id="addTxt" rows="3"></textarea>
                 </div>
-                <button class="btn btn-primary" id="addBtn">Add Note</button>
+                <button class="btn btn-primary mt-2" id="addBtn">Add Note</button>
             </div>
         </div>
         <hr>
